--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "migration:show": "typeorm-ts-node-commonjs migration:show -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@langchain/core": "^1.1.0",
+    "@langchain/openai": "^1.1.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^11.0.1",
@@ -33,11 +35,14 @@
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
     "@ngrok/ngrok": "^1.6.0",
+    "@openai/agents": "^0.3.3",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
+    "deepagents": "^1.2.0",
     "helmet": "^8.0.0",
+    "langchain": "^1.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.1",
     "pg": "^8.13.1",
@@ -45,7 +50,9 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "winston": "^3.15.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.1.13",
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
