--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@ngrok/ngrok": "^1.6.0",
     "@openai/agents": "^0.3.3",
+    "@tavily/core": "^0.5.13",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -45,10 +46,13 @@
     "langchain": "^1.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.1",
+    "openai": "^6.9.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
+    "uuid": "^13.0.0",
+    "wikipedia": "^2.4.2",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.13",
