--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "migration:show": "typeorm-ts-node-commonjs migration:show -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@langchain/core": "^1.1.0",
+    "@langchain/langgraph": "^1.0.2",
     "@langchain/openai": "^1.1.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.2.3",
@@ -42,6 +44,7 @@
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "deepagents": "^1.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^8.0.0",
     "langchain": "^1.1.1",
     "node-telegram-bot-api": "^0.66.0",
@@ -66,6 +69,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/compression": "^1.7.5",
     "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/node-telegram-bot-api": "^0.64.7",
