--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^20.0.0",
     "typeorm": "^0.3.20",
     "uuid": "^13.0.0",
     "wikipedia": "^2.4.2",
@@ -74,6 +75,7 @@
     "@types/node": "^22.10.7",
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/nodemailer": "^6.4.15",
+    "@types/stripe": "^8.0.417",
     "@types/supertest": "^6.0.2",
     "dotenv": "^17.2.3",
     "eslint": "^9.18.0",
